tests/seal/seal.exp
Error ------------------------------------------------------------------------------------------------ obj_annot.js:4:18

Cannot get `param.id` because property `id` is missing in object type [1].

   obj_annot.js:4:18
   4|     return param.id;
                       ^^

References:
   obj_annot.js:3:21
   3| function foo(param: { name: string; }): number {
                          ^^^^^^^^^^^^^^^^^ [1]



Found 1 error
